XMLExper/m17/m17_14_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘void tinyxml2::XMLAttribute::SetAttribute(int64_t)’:
tinyxml2.cpp:1573:33: error: call of overloaded ‘ToStr(int64_t&, char [200], tinyxml2::XMLAttribute::<unnamed enum>)’ is ambiguous
 1573 |  XMLUtil::ToStr(v, buf, BUF_SIZE);
      |                                 ^
tinyxml2.cpp:571:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int, char*, int)’
  571 | void XMLUtil::ToStr( int v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:577:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(unsigned int, char*, int)’
  577 | void XMLUtil::ToStr( unsigned v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:583:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  583 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:592:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  592 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:598:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  598 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:606:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  606 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp: In member function ‘void tinyxml2::XMLElement::SetText(int64_t)’:
tinyxml2.cpp:1746:33: error: call of overloaded ‘ToStr(int64_t&, char [200], tinyxml2::XMLElement::<unnamed enum>)’ is ambiguous
 1746 |  XMLUtil::ToStr(v, buf, BUF_SIZE);
      |                                 ^
tinyxml2.cpp:571:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int, char*, int)’
  571 | void XMLUtil::ToStr( int v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:577:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(unsigned int, char*, int)’
  577 | void XMLUtil::ToStr( unsigned v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:583:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  583 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:592:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  592 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:598:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  598 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:606:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  606 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp: In member function ‘void tinyxml2::XMLPrinter::PushAttribute(const char*, int64_t)’:
tinyxml2.cpp:2799:33: error: call of overloaded ‘ToStr(int64_t&, char [200], tinyxml2::XMLPrinter::<unnamed enum>)’ is ambiguous
 2799 |  XMLUtil::ToStr(v, buf, BUF_SIZE);
      |                                 ^
tinyxml2.cpp:571:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int, char*, int)’
  571 | void XMLUtil::ToStr( int v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:577:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(unsigned int, char*, int)’
  577 | void XMLUtil::ToStr( unsigned v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:583:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  583 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:592:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  592 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:598:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  598 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:606:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  606 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp: In member function ‘void tinyxml2::XMLPrinter::PushText(int64_t)’:
tinyxml2.cpp:2885:42: error: call of overloaded ‘ToStr(int64_t&, char [200], tinyxml2::XMLPrinter::<unnamed enum>)’ is ambiguous
 2885 |     XMLUtil::ToStr( value, buf, BUF_SIZE );
      |                                          ^
tinyxml2.cpp:571:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int, char*, int)’
  571 | void XMLUtil::ToStr( int v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:577:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(unsigned int, char*, int)’
  577 | void XMLUtil::ToStr( unsigned v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:583:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  583 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:592:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  592 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:598:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  598 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:606:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  606 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
diff: tinyxml2.S: No such file or directory
